--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.11.0",
     "axios": "^1.9.0",
     "crypto": "^1.0.1",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.3",
     "prisma": "^6.13.0",
