--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.11.0",
+    "@prisma/client": "^6.14.0",
+    "@stripe/stripe-js": "^7.8.0",
     "axios": "^1.9.0",
     "crypto": "^1.0.1",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.3.3",
-    "prisma": "^6.13.0",
+    "lucide-react": "^0.540.0",
+    "next": "^15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,6 +30,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "prisma": "^6.14.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
